--- a/package.json
+++ b/package.json
@@ -3,30 +3,30 @@
     "version": "0.0.1",
     "private": true,
     "scripts": {
-      "dev": "ts-node-dev ./index.ts",
-      "debug": "node -r ts-node/register index.ts",
-      "build": "turbo build"
+        "dev": "ts-node-dev ./index.ts",
+        "debug": "node -r ts-node/register index.ts",
+        "build": "turbo build"
     },
     "dependencies": {
-      "@types/firebase": "^3.2.1",
-      "cors": "^2.8.5",
-      "dotenv": "^16.0.3",
-      "express": "^4.18.2",
-      "firebase": "^10.7.1",
-      "firebase-admin": "^12.0.0",
-      "jsonwebtoken": "^9.0.2",
-      "log4js": "^6.9.1",
-      "ts-node-dev": "^2.0.0",
-      "zod": "^3.22.4"
+        "@types/firebase": "^3.2.1",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "firebase": "^10.7.1",
+        "firebase-admin": "^12.0.0",
+        "jsonwebtoken": "^9.0.2",
+        "log4js": "^6.9.1",
+        "socket.io": "^4.7.5",
+        "ts-node-dev": "^2.0.0",
+        "zod": "^3.22.4"
     },
     "devDependencies": {
-      "@babel/preset-typescript": "^7.21.5",
-      "@types/cors": "^2.8.13",
-      "@types/express": "^4.17.17",
-      "@types/node": "^18.15.11",
-      "nodemon": "^2.0.22",
-      "ts-node": "^10.9.1",
-      "typescript": "^5.0.3"
+        "@babel/preset-typescript": "^7.21.5",
+        "@types/cors": "^2.8.13",
+        "@types/express": "^4.17.17",
+        "@types/node": "^18.15.11",
+        "nodemon": "^2.0.22",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.0.3"
     }
-  }
-  
+}
